--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Author: YITH
 Author URI: https://yithemes.com
 Description: Proteo is a modern, fast and fully customizable WooCommerce theme. Designed and developed by YITH - a team of top developers of premium themes -  with a beautiful UI, a minimal design and an optimized code, is perfect for each kind of site or shop. With the Proteo Wizard you can import our demo content with just a few clicks - in less than 2 minutes! -  and easily customize it using the advanced front-end customizer. Proteo is the best solution if you want a complete WooCommerce theme that works perfectly also in mobile devices and start quickly to sell your products with WooCommerce without technical knowledge. Works perfectly with page builders like Elementor, Gutenberg & Visual composer. Key features: # WooCommerce Ready # Responsive with a perfect mobile design # Compatible with Elementor, Gutenberg, Visual Composer and others page builders # Translation Ready # Frontend customizer with hundred of options to customize header, footer, pages, typography, style, ecc.  # Google fonts support # Regularly updated and improved with new demos and advanced features # Support to all YITH plugins. Check all our Proteo demos: https://proteo.yithemes.com/
 
-Version: 1.4.5.18
+Version: 1.4.5.20
 License: GPLv2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: yith-proteo
@@ -6496,8 +6496,6 @@ header.center_logo_navigation_below .menu-toggle {
   background-color: var(--proteo-sticky_header_bg_color, var(--proteo-header_bg_color));
 }
 .site-header.sticky .header-contents {
-  padding-top: 8px;
-  padding-bottom: 8px;
   color: var(--proteo-sticky_header_menu_color, #404040);
 }
 .site-header.fullwidth-header .header-contents {
@@ -6508,7 +6506,6 @@ header.center_logo_navigation_below .menu-toggle {
 }
 
 .site-header:not(.sticky) {
-  position: absolute;
   left: 0;
   right: 0;
   width: 100vw;
@@ -6516,6 +6513,11 @@ header.center_logo_navigation_below .menu-toggle {
 }
 .site-header:not(.sticky).with-header-slider {
   background: transparent;
+  position: absolute;
+}
+
+body.static-header .site-header {
+  position: static;
 }
 
 #topbar {
